apps/mmr/base/database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mmr-psql
spec:
  selector:
    matchLabels:
      app: mmr-psql
  serviceName: "mmr-psql"
  replicas: 1
  template:
    metadata:
      labels:
        app: mmr-psql
    spec:
      containers:
        - name: mmr-psql
          image: postgres:12.3
          ports:
            - containerPort: 5432
              name: psql
          volumeMounts:
            - name: mmrpsql-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: mmrpsql-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName:
        resources:
          requests:
            storage: 100M
