apps/mmr/base/mmr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mmr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mmr
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: mmr
    spec:
      containers:
        - name: mmr
          image: turt2live/matrix-media-repo:v1.2.8
          ports:
            - containerPort: 8000
              name: mmr
            - containerPort: 9000
              name: metrics
          volumeMounts:
            - name: mmr-config
              mountPath: /data/conf.d
              readOnly: true
            ## only put this in local-dev overlays
            ## production deployments should use s3
#           - name: mmr-local-storage
#             mountPath: /data/media
      volumes:
        - name: mmr-config
          projected:
            sources:
              - configMap:
                  name: mmr-config-map
              - secret:
                  name: mmr-config-secrets
#       - name: mmr-local-storage
#         persistentVolumeClaim:
#           claimName: mmr-local-storage
