apps/mmr/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mmr-psql
  labels:
    app: mmr-psql
spec:
  ports:
    - port: 5432
      name: psql
  clusterIP: None
  selector:
    app: mmr-psql
