apps/mmr/base/mmr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mmr
  labels:
    app: mmr
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      name: mmr
  selector:
    app: mmr
